# ManuSift

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  regression_pid.json  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark_gate.yml  ci-fast.yml  ci.yml
docs/: DETECTOR_LAYERS.md  REPORT_PATH.md  SECURITY.md  pubpeer_100_coverage_matrix.md  pubpeer_100_fraud_methods.md  pubpeer_integrity_patterns.md
docs/mcp/: README.md  async_calls.example.jsonl  claude_code.mcp.json  claude_desktop.example.json  codex.config.toml  cursor.example.json
evals/: build_fixtures.py  e2e.py  runner.py  smoke_llm_e2e.py
evals/cases/: 01_clean_academic.json  02_duplicate_image.json  03_composite_image.json  04_chatbot_text.json  05_duplicate_paragraph.json  06_llm_enrichment.json
evals/cases/e2e/: 01_clean_academic.json  02_duplicate_image.json  03_composite_image.json  04_chatbot_text.json  05_duplicate_paragraph.json  06_llm_enrichment.json
manusift/: __init__.py  __main__.py  checkpoint.py  cli.py  compaction.py  config.py  config_yaml.py  contracts.py  cost.py  detector_trace.py  events.py  formatters.py  hooks.py  idempotency.py  lifecycle.py  path_hooks.py  pipeline.py  rate_limit.py  retry.py  skills.py  splash.py  stats_algo.py  trace.py  workspace.py
manusift/agent/: __init__.py  factory.py  legacy_audit.py  legacy_loop.py  message_bridge.py  pydantic_loop.py  safety.py  system_prompt.py  tool_bridge.py
manusift/benchmarks/: eval_gate.py
manusift/detectors/: CATALOGUE.md  __init__.py  _build_catalogue.py  _image_size.py  ai_generated_figure.py  author_emails.py  base.py  chart_data_extract.py  citation_network.py  cited_retraction.py  compliance.py  cross_paper_image.py  data_availability_concern.py  figure_grim.py  figure_stat_text.py  figure_table_consistency.py  figure_table_ocr.py  forest_plot.py  image_backends.py  image_calibration.py  image_dup.py  image_forensics.py  image_statistics.py  imagehash_dup.py  metadata.py  noise_inconsistency.py  page_raster_dup.py  panel_dup.py  panel_segmentation.py  paper_mill_authorship.py  paper_mill_template.py  pdf_metadata.py  photoholmes_backend.py  references.py  registry.py  sift_copymove.py  source_data_consistency.py  ssim.py  stat_consistency.py  stat_extra.py  (+8 more)
manusift/ingest/: __init__.py  companion_pdf.py  pdf.py  pdf_tables.py  table_extractor.py  xlsx.py
manusift/knowledge/: __init__.py  base.py  fingerprint_index.py  obsidian_files.py  obsidian_rest.py  resolver.py
manusift/llm/: __init__.py  adjudication.py  chat.py  enrichment.py  prompt_cache.py  schemas.py
manusift/llm/client/: __init__.py  mock.py  protocol.py  providers.py
manusift/mcp/: __init__.py  __main__.py  screen.py  server.py  surface.py
manusift/observability/: __init__.py  session_log.py
manusift/report/: __init__.py  builder.py  data_evidence.py  evidence.py  evidence_builder.py  evidence_cli.py  evidence_report.py  finding_aggregation.py  finding_calibration.py  from_findings.py  investigation_pairs.py  llm_report.py  narrative.py  orchestrator.py  pdf.py  plain_investigation.py  publisher_baselines.json  visual_evidence.py
manusift/tests/: change_detector_lint.py
manusift/tools/: __init__.py  data_audit.py  detector_adapter.py  detector_catalog.py  direct_fs.py  heartbeat.py  inspection.py  knowledge.py  latex.py  python_exec.py  redactor.py  registry.py  render.py  report.py  safe_read.py  safe_read_b.py  safety.py  screen_tools.py  similarity_matrix.py  stats.py  subagent_forwarder.py  table_ocr.py  table_scan.py  table_stats_tools.py  tool.py
manusift/tools/agent_tools/: __init__.py  bash.py  diff.py  grep_glob.py  task.py  todo_write.py  web_fetch.py  web_search.py
manusift/tui/: __init__.py  agent_runner.py  app.py  async_widgets.py  budget.py  chat_app.py  collapse_rule.py  command_palette.py  conversation_state.py  cost_bar.py  data.py  detector_block.py  diff_cmd.py  diff_overlay.py  doctor.py  help_overlay.py  history_filter.py  i18n.py  input_history.py  keybindings.py  live_elapsed.py  panic_hook.py  path_hooks.py  rendering.py  resume.py  right_rail.py  role_alternation.py  slash_popover.py  slash_registry.py  stats_renderer.py  subagent_block.py  turn_block.py
manusift/web/: __init__.py  app.py  jobs_db.py
manusift/web/static/: app.css  app.js  index.html
scripts/: build_tortured_dict.py  check_mcp_stdio.py  ci_benchmark_gate.py  dev-up.sh  install_smoke.py  pilot_deep_screen.py  pilot_real_pdf.py  preflight.py
tests/: conftest.py  mock_parity_harness.py  test_agent_loop.py  test_agent_runner.py  test_agent_runtime_pydantic_mcp.py  test_agent_streaming.py  test_agent_tools.py  test_ai_generated_figure.py  test_async_loading.py  test_author_emails.py  test_auto_discover_source_data.py  test_banner_integration.py  test_bash_windows.py  test_benchmark_skip_detectors.py  test_cde_async_animation.py  test_cde_backend_p1_regression.py  test_cde_banner_height.py  test_cde_c1_slash_wire.py  test_cde_contextbar.py  test_cde_detector_block_permanent.py  test_cde_deter_image_dup.py  test_cde_enter_submit.py  test_cde_esc_binding.py  test_cde_panic_hook.py  test_cde_plan_queue_visible.py  test_cde_render_markup.py  test_cde_render_v2.py  test_cde_render_v3_no_double_mount.py  test_cde_right_rail.py  test_cde_status_styling.py  test_cde_ui_empty_trace.py  test_chart_data_extract.py  test_chart_data_extract_gate.py  test_chat_app_streaming.py  test_chat_detector_integration.py  test_chat_layering.py  test_chat_trust_fixes.py  test_chat_tui_continuity.py  test_chatapp_slash_migration.py  test_checkpoint.py  (+260 more)
tests/fixtures/: parity_scenarios.json
