[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manusift"
version = "0.1.0"
description = "ManuSift — paper-integrity screener (PDF + figures -> forgery-suspect report)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ManuSift"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyMuPDF>=1.24",
    "pdfplumber>=0.10",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.25",
    "jinja2>=3.1",
    "markdown>=3.5",
    "textual>=0.50",
    # P0-9 — structured logging. The trace.py module
    # also keeps a hand-written JSON formatter as a
    # fallback; structlog just gives us nicer console
    # output and bound-keyword arguments.
    "structlog>=24.1",
    # R-audit (2026-06-14):
    # openpyxl is the
    # ``.xlsx`` reader
    # used by
    # ``manusift.ingest.xlsx``.
    # Until now it was
    # an *implicit*
    # dep (the XLSX
    # parser imported
    # it lazily and
    # returned a
    # ``ValueError`` if
    # the user did not
    # have it). A user
    # who copied a
    # paper directory
    # with companion
    # XLSX into the
    # job materials
    # folder would see
    # ``data_source_count=0``
    # for the entire
    # run. Adding it
    # to the base
    # dependencies
    # makes the
    # table-detectors
    # work out of
    # the box.
    "openpyxl>=3.1",
    # R-2026-06-19 (Phase B,
    # safe_read_b.py):
    # the
    # ``extract_*_text``
    # helpers in
    # ``manusift.tools.safe_read_b``
    # use these
    # libraries to
    # convert .docx
    # / .pptx /
    # .ipynb files
    # to plain text.
    # The
    # ``ReadFileTool``
    # catches
    # ``ImportError``
    # at runtime and
    # returns a
    # friendly error,
    # but adding
    # them to the
    # base deps
    # avoids that
    # error path
    # entirely.
    "python-docx>=1.1",
    "python-pptx>=0.6.21",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # R-2026-06-19 (P3-F3):
    # ``ruff`` is the
    # conservative
    # linter / formatter
    # used in the
    # ``ci-fast``
    # workflow.  See
    # ``ruff.toml`` for
    # the rule set
    # (B + F + I + UP
    # + C4, with
    # ``B008`` /
    # ``B905``
    # ignored for
    # legacy code).
    "ruff>=0.6",
]

[project.scripts]
# R-2026-06-12: ``manusift`` now launches the chat TUI
# (the ``manusift/tui/chat_app.py`` interface) so the
# user gets the conversational review experience by
# default. ``manusift-workspace`` is the
# workspace-browser TUI (``manusift/tui/app.py``), and
# the old ``manusift-analyze`` still runs the PDF
# analyzer for debugging.
manusift = "manusift.tui.chat_app:main"
manusift-workspace = "manusift.tui.app:main"
manusift-analyze = "manusift.cli:main"
manusift-evals = "evals.runner:main"
manusift-evals-e2e = "evals.e2e:main"
manusift-tui = "manusift.tui.app:main"
manusift-chat = "manusift.tui.chat_app:main"
manusift-compact-chats = "manusift.compaction:main"
manusift-evidence-report = "manusift.report.evidence_cli:main"

[tool.setuptools.packages.find]
include = ["manusift*", "evals*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
markers = [
    "slow: opt-in tests that need extra time (network, model download, etc.)",
    "real_ocr: opt-in tests that run real EasyOCR over benchmark PDFs",
    "vision: opt-in tests that import OpenCV or run image-processing algorithms",
]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:starlette.exceptions.StarletteDeprecationWarning",
]
