[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manusift"
version = "0.1.0b1"
description = "ManuSift — paper-integrity screener (PDF + figures -> forgery-suspect report)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ManuSift"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyMuPDF>=1.24",
    "pdfplumber>=0.10",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.25",
    "jinja2>=3.1",
    "markdown>=3.5",
    "textual>=0.50",
    # P0-9 — structured logging. The trace.py module
    # also keeps a hand-written JSON formatter as a
    # fallback; structlog just gives us nicer console
    # output and bound-keyword arguments.
    "structlog>=24.1",
    # R-audit (2026-06-14):
    # openpyxl is the
    # ``.xlsx`` reader
    # used by
    # ``manusift.ingest.xlsx``.
    # Until now it was
    # an *implicit*
    # dep (the XLSX
    # parser imported
    # it lazily and
    # returned a
    # ``ValueError`` if
    # the user did not
    # have it). A user
    # who copied a
    # paper directory
    # with companion
    # XLSX into the
    # job materials
    # folder would see
    # ``data_source_count=0``
    # for the entire
    # run. Adding it
    # to the base
    # dependencies
    # makes the
    # table-detectors
    # work out of
    # the box.
    "openpyxl>=3.1",
    # R-2026-06-19 (Phase B,
    # safe_read_b.py):
    # the
    # ``extract_*_text``
    # helpers in
    # ``manusift.tools.safe_read_b``
    # use these
    # libraries to
    # convert .docx
    # / .pptx /
    # .ipynb files
    # to plain text.
    # The
    # ``ReadFileTool``
    # catches
    # ``ImportError``
    # at runtime and
    # returns a
    # friendly error,
    # but adding
    # them to the
    # base deps
    # avoids that
    # error path
    # entirely.
    "python-docx>=1.1",
    "python-pptx>=0.6.21",
    "nbformat>=5.9",
    # Agent runtime (PydanticAI) + MCP tool surface.
    # Domain Kernel stays in manusift.*; these only
    # drive the ReAct loop and external tool I/O.
    "pydantic-ai>=0.0.24",
    "mcp>=1.0",
    # Image-forensics core stack. Declared as base deps
    # (2026-07-18) because the default pipeline's image
    # detectors (image_dup / image_forensics / ssim /
    # page_raster / chart_data_extract / forest_plot)
    # silently no-op without them. All are imported
    # lazily at detector run time; opencv is the
    # headless build (no GUI libs needed).
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "imagehash>=4.3",
    "scipy>=1.11",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # R-2026-06-19 (P3-F3):
    # ``ruff`` is the
    # conservative
    # linter / formatter
    # used in the
    # ``ci-fast``
    # workflow.  See
    # ``ruff.toml`` for
    # the rule set
    # (B + F + I + UP
    # + C4, with
    # ``B008`` /
    # ``B905``
    # ignored for
    # legacy code).
    "ruff>=0.6",
]
# Optional image-forensics stacks (not required for default SIFT path).
image-extra = [
    # Install from GitHub until PyPI release:
    #   pip install "manusift[image-extra]"
    #   pip install -e git+https://github.com/photoholmes/photoholmes.git#egg=photoholmes
]
# Heavy OCR path (EasyOCR + torch, ~2 GB). Enables the
# figure_grim / figure_stat_text / figure_table_ocr
# detectors. The default pipeline runs without it --
# those detectors degrade gracefully to empty results.
ocr = [
    "easyocr>=1.7",
]

[project.scripts]
# Product shape B+C (2026-07): batch screen CLI + MCP tools.
# Conversational chat is NOT the default (surface A removed).
#   manusift screen <pdf>   — offline pipeline
#   manusift mcp            — Domain Kernel over stdio
manusift = "manusift.cli:main"
manusift-analyze = "manusift.cli:main"
manusift-mcp = "manusift.mcp.server:main"
# Optional: job-workspace browser (not chat)
manusift-workspace = "manusift.tui.app:main"
manusift-tui = "manusift.tui.app:main"
manusift-evals = "evals.runner:main"
manusift-evals-e2e = "evals.e2e:main"
manusift-compact-chats = "manusift.compaction:main"
manusift-evidence-report = "manusift.report.evidence_cli:main"

[tool.setuptools.packages.find]
include = ["manusift*", "evals*"]
exclude = ["tests*", "data*"]

# Non-Python runtime data shipped inside the package: detector
# dictionaries, calibration baselines, and the web dashboard's
# static assets. Without this, a wheel/PyPI install silently
# loses them (2026-07-18 wheel inspection).
[tool.setuptools.package-data]
manusift = [
    "detectors/*.json",
    "detectors/*.md",
    "report/*.json",
    "web/static/*",
]

[tool.pytest.ini_options]
markers = [
    "slow: opt-in tests that need extra time (network, model download, etc.)",
    "real_ocr: opt-in tests that run real EasyOCR over benchmark PDFs",
    "vision: opt-in tests that import OpenCV or run image-processing algorithms",
]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:starlette.exceptions.StarletteDeprecationWarning",
]
